added user-page functionality and refactored backend code